--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
-title: Covid @ Home
-description: A guide for caring for Covid-19 patients at home
+title: Covid zu hause
+description: Ein Leitfaden für die Betreuung von COVID-19-Patienten zu Hause
 google_analytics: UA-160293705-1
 show_downloads: false
 github:
