--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 title: Covid zu hause
-description: Ein Leitfaden für die Betreuung von COVID-19-Patienten zu Hause
+description: Leitfaden für die Betreuung von COVID-19 Patienten
 google_analytics: UA-160293705-1
 show_downloads: false
 github:
