--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -4,7 +4,7 @@
 languages:
 
 - title: English
-  url: https://covid-at-home.info
+  url: https://covid-zu-hause.info
 
 - title: Deutsch
   url: https://covid-zu-hause.info
