--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-slate
 title: Covid zu hause
-description: Leitfaden für die Betreuung von COVID-19 Patienten in einfacher Sprache
-url: https://julianroesner.github.io/covid-zu-hause.github.io/
+description: Leitfaden für die Betreuung von COVID-19 Patienten
+url: https://covid-zu-hause.info
 slug: covid-zu-hause
 goatcounter: covid-zu-hause
 
